Fixed alignSelectorRight option bug.

--- a/src/my-date-picker/my-date-picker.component.css
+++ b/src/my-date-picker/my-date-picker.component.css
@@ -19,7 +19,7 @@
     margin-top: 2px;
     margin-left: -1px;
     position: absolute;
-    width: 262px;
+    width: 252px;
     padding: 1px;
     border-radius: 2px;
     background-color: #CCC;
@@ -46,7 +46,6 @@
 .mydp .selectorarrow:after,
 .mydp .selectorarrow:before {
     bottom: 100%;
-    left: 24px;
     border: solid transparent;
     content: " ";
     height: 0;
@@ -66,6 +65,16 @@
     border-bottom-color: #CCC;
     border-width: 11px;
     margin-left: -11px;
+}
+
+.mydp .selectorarrowleft:after,
+.mydp .selectorarrowleft:before {
+    left: 24px;
+}
+
+.mydp .selectorarrowright:after,
+.mydp .selectorarrowright:before {
+    left: 224px;
 }
 
 .mydp .alignselectorright {
@@ -154,7 +163,6 @@
 }
 
 .mydp .header td:nth-child(1) {
-    font-size: 16px;
     padding-left: 4px;
 }
 
@@ -163,7 +171,6 @@
 }
 
 .mydp .header td:nth-child(3) {
-    font-size: 16px;
     padding-right: 4px;
 }
 
@@ -261,7 +268,6 @@
 
 .mydp .headerbtncell {
     background-color: #FAFAFA;
-    cursor: pointer;
     display: table-cell;
     vertical-align: middle;
 }
@@ -351,7 +357,7 @@
 .mydp .icon-left,
 .mydp .icon-right {
     color: #222;
-    font-size: 16px;
+    font-size: 98%;
     vertical-align: middle;
 }
 
